--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -22,6 +22,6 @@ jobs:
       with:
         node-version: 16.14
         cache: 'npm'
-#     - run: npm ci
+    - run: npm ci
 #     - run: npm run build --if-present
 #     - run: npm test
