--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
   "dependencies": {
-       "bcrypt12345": "^5.1.0",
-    "dotenv": "^1234.0.3",
+      "bcrypt": "^5.1.0",
+    "dotenv": "^16.0.3",
     "express": "^4.18.2",
-    "mysql212345": "^3.1.0",
+    "mysql2": "^3.1.0",
     "pg": "^8.9.0",
-    "pg-hstore1234": "^2.3.4",
-    "sequelize": "^6.28.0
+    "pg-hstore": "^2.3.4",
+    "sequelize": "^6.28.0"
   },
   "name": "webapp",
   "description": "**Assignment 1**   <br /> This assignment solution is the implementation of a web application using a technology stack that meets Cloud-Native Web Application Requirements. It uses Express (a Node.js web application framework) to build the web application.",
