--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -23,5 +23,5 @@ jobs:
         node-version: 16.14
         cache: 'npm'
     - run: npm ci
-#     - run: npm run build --if-present
+    - run: npm run build --if-present
 #     - run: npm test
